<resources>
    <string name="app_name">sns_kanri</string>


    <!-- StopWatchFragment -->
    <string name="stop_watch_menu">Stop Watch</string>
    <string name="timer_zero">0</string>
    <string name="command_stop">STOP</string>
    <string name="notification_title">SNS管理app</string>

    <!-- SelectFragment -->
    <string name="select_menu">SNS選択</string>
    <string name="fab_create">SNS作成</string>
    <string name="fab_delete">SNS削除</string>

    <string name="sns_delete">削除する項目を選択してください</string>

    <!-- TimeSetDialog -->
    <string name="time_set_title">使用時間</string>
    <string name="time_set_hour">時間</string>
    <string name="time_set_minutes">分</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>

    <!-- RecordFragment -->
    <string name="record_submit">記録</string>

    <!-- RecordListFragment -->
    <string name="record_none">データがありません</string>

    <!-- ReportFragment -->
    <string name="report_none">データがありません</string>
    <string name="today">今日</string>
    <string name="week">今週</string>
    <string name="month">今月</string>
    <string name="hour">時間</string>

    <!-- EditFragment -->
    <string name="edit_menu">編集画面</string>

    <!-- DeleteDialogFragment -->
    <string name="delete_title">削除確認</string>
    <string name="delete_message">この記録を削除しますか？</string>
    <string name="delete_ok">はい</string>
    <string name="delete_cancel">いいえ</string>

    <!-- SnsFragment -->
    <string name="sns_menu">SNS新規作成</string>
    <string name="sns_create">作成</string>
    <string name="sns_name">SNS名称</string>
    <string name="sns_color">カラー選択</string>

</resources>
