<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/record_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SnsFragment">

    <LinearLayout
        android:id="@+id/sns_name"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/select_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sns_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name_sns"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_color"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sns_color"
            android:textSize="15sp" />

        <com.flask.colorpicker.ColorPickerView
            android:id="@+id/color_picker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            app:alphaSlider="false"
            app:density="6"
            app:lightnessSlider="false"
            app:wheelType="FLOWER" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_radius"
        android:text="@string/sns_create"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
