<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".Fragment.ReportFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="3">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/today"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/today"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/today_hour"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:textSize="35sp"
                        app:layout_constraintTop_toBottomOf="@+id/today" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="bottom|end"
                        android:paddingEnd="5dp"
                        android:text="@string/hour"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@+id/today_hour" />

                </android.support.constraint.ConstraintLayout>

                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/this_week"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/week"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/this_week_hour"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:textSize="35sp"
                        app:layout_constraintTop_toBottomOf="@+id/this_week" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="bottom|end"
                        android:paddingEnd="5dp"
                        android:text="@string/hour"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@+id/this_week_hour" />
                </android.support.constraint.ConstraintLayout>

                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/this_month"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/month"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/this_month_hour"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:textSize="35sp"
                        app:layout_constraintTop_toBottomOf="@+id/this_month" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="bottom|end"
                        android:paddingEnd="5dp"
                        android:text="@string/hour"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@+id/this_month_hour" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <LinearLayout
                    android:id="@+id/date_select_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <ImageButton
                        android:id="@+id/btn_bar_navigate_before"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:src="@mipmap/baseline_navigate_before_black_24" />

                    <TextView
                        android:id="@+id/date_text_view"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/report_none"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/btn_bar_navigate_next"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:src="@mipmap/baseline_navigate_next_black_24" />
                </LinearLayout>

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/date_select_layout" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pie_chart"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:layout_margin="8dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
